--- a/index.html
+++ b/index.html
@@ -13,24 +13,36 @@
             -webkit-tap-highlight-color: transparent; 
         }
 
-        /* UPDATED CSS: Top Bar to show visible text */
+        /* UPDATED CSS: Top Bar centered container */
         #topBar {
             position: fixed; /* Always on screen */
             top: 0;
             left: 0;
             width: 100%;
-            height: 30px; /* Give it a small height */
+            height: 30px; 
             background: rgba(255, 255, 255, 0); /* Completely transparent background */
-            color: #717171; /* Make text a subtle light gray (now visible) */
-            z-index: 1000; /* Ensure it's above everything */
+            z-index: 1000; 
             display: flex;
-            justify-content: flex-end;
+            /* CHANGE: Center horizontally */
+            justify-content: center; 
             align-items: center;
-            padding: 0 20px; /* Increased padding for better spacing */
-            font-size: 20px;
-            /* REMOVED: opacity: 0; to make it visible */
+            padding: 5px 20px;
             pointer-events: none; /* Allows clicks to pass through */
         }
+
+        #wordCountDisplay {
+    color: #555; /* Darker gray text for visibility */
+    background-color: #f0f0f0; /* Light gray background */
+    padding: 8px 10px;
+    font-size: 20px;
+    
+    /* Creates the capsule shape */
+    border-radius: 88px; 
+    font-weight: 500;
+    margin-top: 50px;
+    /* Center the text horizontally */
+    text-align: center;
+}
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -155,8 +167,6 @@
         const wordCountDisplay = document.getElementById('wordCountDisplay');
 
         function updateWordCount(text) {
-            // Trim whitespace from both ends, then split by one or more spaces, tabs, or newlines.
-            // Filter is used to remove empty strings that result from extra spaces.
             const words = text.trim().split(/\s+/).filter(word => word.length > 0);
             const count = words.length;
             
