--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 
         #wordCountDisplay {
     color: #555; /* Darker gray text for visibility */
-    background-color: #f0f0f0; /* Light gray background */
+   background: linear-gradient(to bottom, #f4f4f4,#ffffff, #e8e8e8); /* Light gray background */
     padding: 8px 10px;
     font-size: 20px;
+    border-top: #e9e9e9 2px solid;
+    border-bottom: #dadada 2px solid;
     
     /* Creates the capsule shape */
     border-radius: 88px; 
@@ -116,7 +118,7 @@
         }
 
         .text-area-section {
-            border-top: 2px solid #f0f0f0;
+            border-top: 2px solid #ffffff;
             padding: 20px;
             background: white;
             flex-shrink: 0; 
