--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
             placeholder="Start typing here..."
             oninput="onTextChange()"
         ></textarea>
-        <div class="germ">This model is powered by a RNN model architecture for a better LSTM model refer to <a class="link" href="https://arxiv.org/abs/1707.06472">LSTM Autocomplete</a>.</div>
+        <div class="germ">This model is powered by a basic RNN model architecture for a better LSTM model refer to <a class="link" href="https://arxiv.org/abs/1707.06472">LSTM Autocomplete</a>.</div>
+        <div class="germ">Find the source code on <a class="link" href="https://github.com/Sagnikkroy/RNN_AutoComplete">GitHub</a>.</div>
     </div>
 
     <script>
