--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
     <title>RNN Autocomplete</title>
     <style>
         * {
@@ -12,43 +12,42 @@
             -webkit-tap-highlight-color: transparent;
         }
 
-        #topBar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 30px;
-            background: rgba(255, 255, 255, 0);
-            z-index: 1000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 5px 20px;
-            pointer-events: none;
-        }
-
-        #wordCountDisplay {
-            color: #555;
-            background: linear-gradient(to bottom, #f4f4f4,#ffffff, #f3f3f3);
-            padding: 8px 10px;
-            font-size: 20px;
-            border-top: #e9e9e9 2px solid;
-            border-bottom: #dadada 2px solid;
-            border-radius: 88px;
-            font-weight: 500;
-            margin-top: 50px;
-            text-align: center;
-            pointer-events: auto;
+        html, body {
+            height: 100%;
+            overflow: hidden;
         }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: white;
-            height: 100vh;
             display: flex;
             flex-direction: column;
-            overflow: hidden;
-            padding-top: 30px;
+        }
+
+        #topBar {
+            position: sticky;
+            top: 0;
+            width: 100%;
+            background: white;
+            z-index: 1000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px 20px;
+            flex-shrink: 0;
+            border-bottom: 1px solid #f0f0f0;
+        }
+
+        #wordCountDisplay {
+            color: #555;
+            background: linear-gradient(to bottom, #f4f4f4,#ffffff, #f3f3f3);
+            padding: 6px 12px;
+            font-size: 16px;
+            border-top: #e9e9e9 2px solid;
+            border-bottom: #dadada 2px solid;
+            border-radius: 88px;
+            font-weight: 500;
+            text-align: center;
         }
 
         .prediction-area {
@@ -57,7 +56,10 @@
             justify-content: center;
             align-items: center;
             position: relative;
-            overflow: hidden;
+            overflow-y: auto;
+            overflow-x: hidden;
+            min-height: 0;
+            padding: 20px 10px;
         }
 
         .gradient-overlay {
@@ -65,7 +67,7 @@
             top: 0;
             left: 0;
             right: 0;
-            height: 150px;
+            height: 80px;
             background: linear-gradient(to bottom, white 0%, rgba(255,255,255,0) 100%);
             pointer-events: none;
             z-index: 10;
@@ -75,14 +77,14 @@
             background: white;
             color: #333;
             border: none;
-            padding: 20px 40px;
-            font-size: 40px;
+            padding: 15px 20px;
+            font-size: clamp(24px, 6vw, 48px);
             font-weight: 400;
-            max-width: 90%;
+            max-width: 95%;
             word-wrap: break-word;
             text-align: center;
             white-space: pre-wrap;
-            line-height: 1.2;
+            line-height: 1.3;
         }
 
         .user-text-highlight {
@@ -97,27 +99,29 @@
         }
         
         .germ {
-            margin-top: 10px;
-            font-size: 14px;
+            margin-top: 8px;
+            font-size: 12px;
             color: #888;
             text-align: center;
             font-weight: 400;
+            line-height: 1.4;
         }
 
         .text-area-section {
             border-top: 2px solid #ffffff;
-            padding: 20px;
+            padding: 15px;
             background: white;
             flex-shrink: 0;
         }
 
         #textInput {
             width: 100%;
-            min-height: 120px;
-            padding: 20px;
-            font-size: 30px;
+            min-height: 80px;
+            max-height: 150px;
+            padding: 15px;
+            font-size: clamp(16px, 4vw, 24px);
             border: 2px solid #ffffff;
-            border-radius: 15px;
+            border-radius: 12px;
             resize: none;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             box-sizing: border-box;
@@ -136,6 +140,73 @@
 
         #textInput::placeholder {
             color: #bbb;
+        }
+
+        @media (max-width: 768px) {
+            #topBar {
+                padding: 8px 15px;
+            }
+
+            #wordCountDisplay {
+                font-size: 14px;
+                padding: 5px 10px;
+            }
+
+            .prediction-area {
+                padding: 15px 10px;
+            }
+
+            #charPredictionDisplay {
+                padding: 10px 15px;
+            }
+
+            .text-area-section {
+                padding: 12px;
+            }
+
+            #textInput {
+                min-height: 70px;
+                padding: 12px;
+            }
+
+            .germ {
+                font-size: 11px;
+                margin-top: 6px;
+            }
+        }
+
+        @media (max-height: 500px) {
+            #topBar {
+                padding: 5px 15px;
+            }
+
+            #wordCountDisplay {
+                font-size: 13px;
+                padding: 4px 8px;
+            }
+
+            .prediction-area {
+                padding: 10px;
+            }
+
+            #charPredictionDisplay {
+                font-size: clamp(18px, 5vw, 32px);
+                padding: 8px 12px;
+            }
+
+            .text-area-section {
+                padding: 10px;
+            }
+
+            #textInput {
+                min-height: 60px;
+                padding: 10px;
+            }
+
+            .germ {
+                font-size: 10px;
+                margin-top: 4px;
+            }
         }
     </style>
 </head>
