--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         <div class="model-selector-wrapper">
             <span class="api-status-icon material-symbols-outlined" id="apiStatusIcon">toys_fan</span>
             <select id="modelSelector" onchange="onModelChange()">
-                <option value="rnn">RNN Model</option>
+                <option value="rnn">RNN GRU Model</option>
                 <option value="lstm">LSTM Model</option>
             </select>
         </div>
